248 Do Whats Right: fix line spacing and height (#257)
Adjust letter spacing and line height for Do What's Right...
Adjust letter spacing for right-side item headings
Adjust positioning to account for different text spacing
Remove superfluous empty file

--- a/sections/do-whats-right-section/WhatsRight.module.css
+++ b/sections/do-whats-right-section/WhatsRight.module.css
@@ -27,11 +27,11 @@
   }
   80% {
     background-color: #ff86c6;
-    height: 722px;
+    height: 663px;
   }
   95% {
     background-color: #ff86c6;
-    height: 722px;
+    height: 663px;
   }
   100% {
     display: none;
@@ -45,8 +45,8 @@
     width: 0;
   }
   100% {
-    left: 240px;
-    width: 133px;
+    left: 220px;
+    width: 153px;
   }
 }
 @keyframes whatsRightTreeBranchAnimation {
